--- a/gi-pro-mobile/www/templates/searchresults.html
+++ b/gi-pro-mobile/www/templates/searchresults.html
@@ -20,10 +20,10 @@
 						<li class="email"><span>{{'professional_mail' | translate}}:</span> {{offer.professional.mail}}</li>
 					</ul>
 					<!--
-					<button class="button button-small button-dark" ng-click="">
+					<button class="button button-small button-royal" ng-click="">
 						<i class="icon ion-email"></i>
 					</button>
-					<button class="button button-small button-dark" ng-click="">
+					<button class="button button-small button-royal" ng-click="">
 						<i class="icon ion-android-call"></i>
 					</button>
 					-->
@@ -31,10 +31,10 @@
 
 				<!--
 				<div class="actions">
-					<a class="button button-small button-dark button-outline icon-left ion-android-call" ng-href="tel:{{offer.professional.phone}}">
+					<a class="button button-small button-royal button-outline icon-left ion-android-call" ng-href="tel:{{offer.professional.phone}}">
 						{{'call' | translate}}
 					</a>
-					<a class="button button-small button-dark button-outline icon-left ion-email" ng-href="mailto:{{offer.professional.mail}}">
+					<a class="button button-small button-royal button-outline icon-left ion-email" ng-href="mailto:{{offer.professional.mail}}">
 						{{'email' | translate}}
 					</a>
 				</div>
