--- a/gi-pro-mobile/www/templates/form_offer.html
+++ b/gi-pro-mobile/www/templates/form_offer.html
@@ -17,7 +17,7 @@
 
 			<div class="item item-toggle">
 				{{'form_datetime' | translate}}
-				<label class="toggle toggle-dark">
+				<label class="toggle toggle-royal">
 					<input type="checkbox" ng-model="newOffer.useDateTime">
 					<div class="track">
 						<div class="handle"></div>
@@ -58,10 +58,10 @@
 			</div>
 		</div>
 
-		<!--<button class="button button-block button-dark" ng-click="openPoisModal()">Apri POIs Modal</button>-->
-		<!--<button class="button button-block button-dark" ng-click="openDatePicker()">Apri DatePicker</button>-->
-		<!--<button class="button button-block button-dark" ng-click="openTimePicker()">Apri TimePicker</button>-->
-		<!--<button class="button button-block button-dark" ng-click="goTo('app.home')">app.home</button>-->
+		<!--<button class="button button-block button-royal" ng-click="openPoisModal()">Apri POIs Modal</button>-->
+		<!--<button class="button button-block button-royal" ng-click="openDatePicker()">Apri DatePicker</button>-->
+		<!--<button class="button button-block button-royal" ng-click="openTimePicker()">Apri TimePicker</button>-->
+		<!--<button class="button button-block button-royal" ng-click="goTo('app.home')">app.home</button>-->
 	</ion-content>
 
 	<ion-footer-bar>
