--- a/gi-pro-mobile/www/templates/menu.html
+++ b/gi-pro-mobile/www/templates/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
 	<ion-side-menu-content>
-		<ion-nav-bar class="bar-dark">
+		<ion-nav-bar class="bar-royal">
 			<ion-nav-back-button>
 			</ion-nav-back-button>
 
@@ -12,9 +12,11 @@
 	</ion-side-menu-content>
 
 	<ion-side-menu side="left">
+		<!--
 		<ion-header-bar>
-			<!--<h1 class="title">Left</h1>-->
+			<h1 class="title">Left</h1>
 		</ion-header-bar>
+		-->
 
 		<ion-content>
 			<ion-list>
