--- a/gi-pro-mobile/www/templates/modal_pois.html
+++ b/gi-pro-mobile/www/templates/modal_pois.html
@@ -34,6 +34,6 @@
 	</ion-content>
 
 	<ion-footer-bar>
-		<button class="button button-dark button-block" ng-disabled="!search.poi" ng-click="closePoisModal(getSelectedPoi)">{{'ok' | translate}}</button>
+		<button class="button button-royal button-block" ng-disabled="!search.poi" ng-click="closePoisModal(getSelectedPoi)">{{'ok' | translate}}</button>
 	</ion-footer-bar>
 </ion-modal-view>
