--- a/gi-pro-mobile/www/css/ionic.app.css
+++ b/gi-pro-mobile/www/css/ionic.app.css
@@ -9817,45 +9817,45 @@ a.button {
 
 /* IonicDatePicker, IonicTimePicker */
 .toga-app .ionic_datepicker_popup .today {
-  border: 1px solid #444;
+  border: 1px solid #8a567a;
   /*border-radius: 50%;*/ }
 
 .toga-app .ionic_datepicker_popup .selected_date {
-  background-color: #444;
+  background-color: #8a567a;
   /*border-radius: 50%;*/
   color: #ffffff;
   /*font-weight: bold;*/ }
 
 .toga-app .ionic_datepicker_popup .popup-head {
-  background-color: #444;
+  background-color: #8a567a;
   /*display: none;*/ }
 
 .toga-app .ionic_datepicker_popup .popup-body .selected_date_full {
-  background-color: #444; }
+  background-color: #8a567a; }
 
 .toga-app .ionic_datepicker_popup .popup-body .month_select,
 .toga-app .ionic_datepicker_popup .popup-body .year_select {
   /*border: none;*/
-  border-bottom: 1px solid #444;
+  border-bottom: 1px solid #8a567a;
   /*padding: 0;*/ }
 
 .toga-app .ionic_datepicker_popup .popup-body .month_select:after,
 .toga-app .ionic_datepicker_popup .popup-body .year_select:after {
   /*right: 5px;*/
-  color: #444; }
+  color: #8a567a; }
 
 .toga-app .ionic_datepicker_popup .popup-body .button-clear {
-  color: #444; }
+  color: #8a567a; }
 
 .toga-app .ionic_datepicker_popup .popup-buttons button {
-  background-color: #444;
+  background-color: #4e7499;
   /*border-radius: 0;
 		margin-right: 1px;*/
   color: #ffffff; }
 
 .toga-app .ionic_datepicker_modal .header,
 .toga-app .ionic_datepicker_modal .footer {
-  background-color: #444; }
+  background-color: #8a567a; }
   .toga-app .ionic_datepicker_modal .header .title,
   .toga-app .ionic_datepicker_modal .header .button,
   .toga-app .ionic_datepicker_modal .footer .title,
@@ -9863,32 +9863,32 @@ a.button {
     color: #ffffff; }
 
 .toga-app .ionic_datepicker_modal .today {
-  border: 1px solid #444; }
+  border: 1px solid #8a567a; }
 
 .toga-app .ionic_datepicker_modal .selected_date {
-  background-color: #444;
+  background-color: #8a567a;
   color: #fff;
   /*font-weight: bold;*/ }
 
 .toga-app .ionic_datepicker_modal .button-clear {
-  color: #444; }
+  color: #8a567a; }
 
 .toga-app .ionic_datepicker_modal .month_select,
 .toga-app .ionic_datepicker_modal .year_select {
   /*border: none;*/
-  border-bottom: 1px solid #444;
+  border-bottom: 1px solid #8a567a;
   /*padding: 0;*/ }
 
 .toga-app .ionic_datepicker_modal .month_select:after,
 .toga-app .ionic_datepicker_modal .year_select:after {
   /*right: 5px;*/
-  color: #444; }
+  color: #8a567a; }
 
 .toga-app .ionic_timepicker_popup .popup-body .heading {
-  background-color: #444; }
+  background-color: #8a567a; }
 
 .toga-app .ionic_timepicker_popup .popup-buttons .button {
-  background-color: #444; }
+  background-color: #4e7499; }
 
 /* Buttons */
 .button.button-fab {
@@ -9907,9 +9907,10 @@ a.button {
 input[readonly] {
   background-color: transparent !important; }
 
-/*.input-label {
-	color: black;
-}*/
+.input-label {
+  /*color: black;*/
+  font-weight: bold; }
+
 .item-stacked-label {
   border: 0; }
   .item-stacked-label .input-value {
@@ -9926,7 +9927,9 @@ input[readonly] {
 .bar-footer {
   background: none; }
   .bar-footer .button.button-block {
-    margin: 0; }
+    margin: 0;
+    text-transform: uppercase;
+    font-weight: bold; }
   .bar-footer .row {
     padding: 0; }
     .bar-footer .row .col {
@@ -9954,8 +9957,8 @@ input[readonly] {
 .tab-item.tab-item-active,
 .tab-item.active,
 .tab-item.activated {
-  /*color: $t_darkwine !important;*/
-  color: #b99aaf !important; }
+  color: #652648 !important;
+  /*color: $t_lightwine !important;*/ }
 
 .tabs-striped .tabs {
   border-color: transparent; }
@@ -9968,8 +9971,8 @@ input[readonly] {
 .tabs-top.tabs-striped .tab-item.active,
 .tabs-top.tabs-striped .tab-item.activated {
   border-width: 0px 0px 3px 0px !important;
-  /*border-color: $t_darkwine;*/
-  border-color: #b99aaf; }
+  border-color: #652648;
+  /*border-color: $t_lightwine;*/ }
 
 /*
  * HOME
@@ -9982,8 +9985,11 @@ input[readonly] {
  */
 .details .datetime {
   padding: 10px 0;
-  text-align: center;
-  font-size: larger; }
+  /*text-align: center;*/
+  /*font-size: larger;*/ }
+  .details .datetime .date,
+  .details .datetime .time {
+    font-weight: bold; }
 
 .details .professional {
   padding: 10px 0; }
@@ -10001,6 +10007,8 @@ input[readonly] {
     font-style: italic; }
   .details .poi .name {
     font-weight: bold; }
+  .details .poi .address {
+    font-style: italic; }
 
 /*
  * SEARCH
@@ -10032,8 +10040,17 @@ input[readonly] {
 /*
  * POIS MODAL, TYPES/REGIONS POPUPS
  */
-.modal-pois .list-pois .item-radio .radio-content .item-content {
+.modal-pois .list-container .input-label {
+  width: 100%;
+  padding-left: 16px;
+  margin: 0;
+  max-width: none; }
+
+.modal-pois .list-container .list .list-pois .item-radio .radio-content .item-content {
   white-space: normal; }
+
+.modal-pois .list-container > .list {
+  margin-top: 5px; }
 
 .popup-types .popup-head,
 .popup-regions .popup-head {
