--- a/gi-pro-mobile/www/templates/form_offer.html
+++ b/gi-pro-mobile/www/templates/form_offer.html
@@ -17,7 +17,7 @@
 
 			<div class="item item-toggle">
 				{{'form_datetime' | translate}}
-				<label class="toggle toggle-royal">
+				<label class="toggle toggle-calm">
 					<input type="checkbox" ng-model="newOffer.useDateTime">
 					<div class="track">
 						<div class="handle"></div>
