--- a/gi-pro-mobile/www/templates/menu.html
+++ b/gi-pro-mobile/www/templates/menu.html
@@ -38,6 +38,9 @@
 				<ion-item nav-clear menu-close class="item item-icon-left" ng-if="!!user" ng-click="logout()">
 					<i class="icon ion-log-out"></i> {{'logout' | translate}}
 				</ion-item>
+				<ion-item nav-clear menu-close class="item item-icon-left" ui-sref-active="active" ui-sref="app.credits">
+					<i class="icon ion-information-circled"></i> {{'credits' | translate}}
+				</ion-item>
 			</ion-list>
 		</ion-content>
 	</ion-side-menu>
