--- a/gi-pro-mobile/www/templates/modal_pois.html
+++ b/gi-pro-mobile/www/templates/modal_pois.html
@@ -19,6 +19,7 @@
 		</div>
 
 		<div class="list-container">
+			<span class="input-label">{{'poi_select' | translate}}</span>
 			<div class="list list-inset">
 				<div class="item item-input">
 					<input type="text" placeholder="{{'poi_filter_placeholder' | translate}}" ng-model="search.name">
@@ -34,6 +35,6 @@
 	</ion-content>
 
 	<ion-footer-bar>
-		<button class="button button-royal button-block" ng-disabled="!search.poi" ng-click="closePoisModal(getSelectedPoi)">{{'ok' | translate}}</button>
+		<button class="button button-calm button-block" ng-disabled="!search.poi" ng-click="closePoisModal(getSelectedPoi)">{{'ok' | translate}}</button>
 	</ion-footer-bar>
 </ion-modal-view>
