--- a/gi-pro-mobile/www/templates/offer.html
+++ b/gi-pro-mobile/www/templates/offer.html
@@ -3,10 +3,6 @@
 	</ion-nav-buttons>
 
 	<ion-content class="padding">
-		<div class="datetime" ng-if="!!offer.startTime && !!offer.endTime">
-			<span class="date">{{offer.startTime | date:'longDate'}}</span>, <span class="time">{{offer.startTime | date:'shortTime'}} - {{offer.endTime | date:'shortTime'}}</span>
-		</div>
-
 		<ul class="professional" ng-if="!isMine()">
 			<li class="name">{{offer.professional.name}} {{offer.professional.surname}}</li>
 			<li class="type">{{'professional_type_' + offer.professional.type | translate}}</li>
@@ -29,16 +25,24 @@
 			</div>
 		</div>
 
-		<ul class="poi">
-			<li class="type">{{offer.poi.type}}</li>
-			<li class="name">{{offer.poi.name}}</li>
-			<li class="description">{{offer.poi.description}}</li>
-			<li class="address">{{offer.poi.address}}</li>
-		</ul>
+		<div class="poi">
+			<div>{{'offer_detail_poi' | translate}}</div>
+			<ul>
+				<!--<li class="type">{{offer.poi.type}}</li>-->
+				<li class="name">{{offer.poi.name}}</li>
+				<li class="description">{{offer.poi.description}}</li>
+				<li class="address">{{offer.poi.address}}</li>
+			</ul>
+		</div>
+
+		<div class="datetime" ng-if="!!offer.startTime && !!offer.endTime">
+			<div>{{'offer_detail_date' | translate}}</div>
+			<span class="date">{{offer.startTime | date:'longDate'}}</span>, <span class="time">{{offer.startTime | date:'shortTime'}} - {{offer.endTime | date:'shortTime'}}</span>
+		</div>
 	</ion-content>
 
 	<ion-footer-bar ng-if="isEditable()">
-		<button class="button button-assertive button-outline button-block" ng-click="deleteOffer()">
+		<button class="button button-assertive button-block" ng-click="deleteOffer()">
 			{{'delete' | translate}}
 		</button>
 	</ion-footer-bar>
