--- a/gi-pro-mobile/www/templates/home.html
+++ b/gi-pro-mobile/www/templates/home.html
@@ -7,45 +7,39 @@
 	<ion-tabs class="tabs-royal">
 		<ion-tab title="{{'home_tab_1' | translate}}">
 			<ion-pane>
-				<ion-content scroll="false">
-					<ion-scroll>
-						<h4 class="padding" ng-if="!!requests && requests.length == 0">{{'requests_empty' | translate}}</h4>
-
-						<div class="card" ng-repeat="request in requests" ng-if="!!requests && requests.length > 0" ng-click="openRequestDetails(request)">
-							<div class="item item-text-wrap">
-								<h2>{{request.poi.name}}</h2>
-								<h3>{{request.startTime | date:'longDate'}}, {{request.startTime | date:'shortTime'}}</h3>
-								<span class="badge badge-calm" ng-if="!!requestsNotifications[request.objectId]">{{requestsNotifications[request.objectId].length}}</span>
-							</div>
+				<ion-content>
+					<h4 class="padding" ng-if="!!requests && requests.length == 0">{{'requests_empty' | translate}}</h4>
+					<div class="card" ng-repeat="request in requests" ng-if="!!requests && requests.length > 0" ng-click="openRequestDetails(request)">
+						<div class="item item-text-wrap">
+							<h2>{{request.poi.name}}</h2>
+							<h3>{{request.startTime | date:'longDate'}}, {{request.startTime | date:'shortTime'}}</h3>
+							<span class="badge badge-calm" ng-if="!!requestsNotifications[request.objectId]">{{requestsNotifications[request.objectId].length}}</span>
 						</div>
-					</ion-scroll>
-					<button class="button button-calm button-fab" ng-click="goTo('app.newrequest')">
-						<i class="icon ion-plus"></i>
-					</button>
+					</div>
 				</ion-content>
+				<button class="button button-calm button-fab" ng-click="goTo('app.newrequest')">
+					<i class="icon ion-plus"></i>
+				</button>
 			</ion-pane>
 		</ion-tab>
 
 		<ion-tab title="{{'home_tab_2' | translate}}">
 			<ion-pane>
-				<ion-content scroll="false">
-					<ion-scroll>
-						<h4 class="padding" ng-if="!!offers && offers.length == 0">{{'offers_empty' | translate}}</h4>
-
-						<div class="card" ng-repeat="offer in offers" ng-if="!!offers && offers.length > 0" ng-click="openOfferDetails(offer)">
-							<div class="item item-text-wrap">
-								<h2>{{offer.poi.name}}</h2>
-								<h3 ng-if="!!offer.startTime && !!offer.endTime">
+				<ion-content>
+					<h4 class="padding" ng-if="!!offers && offers.length == 0">{{'offers_empty' | translate}}</h4>
+					<div class="card" ng-repeat="offer in offers" ng-if="!!offers && offers.length > 0" ng-click="openOfferDetails(offer)">
+						<div class="item item-text-wrap">
+							<h2>{{offer.poi.name}}</h2>
+							<h3 ng-if="!!offer.startTime && !!offer.endTime">
 									{{offer.startTime | date:'longDate'}}, {{offer.startTime | date:'shortTime'}} - {{offer.endTime | date:'shortTime'}}
 								</h3>
-								<span class="badge badge-calm" ng-if="!!offersNotifications[offer.objectId]">{{offersNotifications[offer.objectId].length}}</span>
-							</div>
+							<span class="badge badge-calm" ng-if="!!offersNotifications[offer.objectId]">{{offersNotifications[offer.objectId].length}}</span>
 						</div>
-					</ion-scroll>
-					<button class="button button-calm button-fab" ng-click="goTo('app.newoffer')">
-						<i class="icon ion-plus"></i>
-					</button>
+					</div>
 				</ion-content>
+				<button class="button button-calm button-fab" ng-click="goTo('app.newoffer')">
+					<i class="icon ion-plus"></i>
+				</button>
 			</ion-pane>
 		</ion-tab>
 	</ion-tabs>
