--- a/gi-pro-mobile/www/templates/search.html
+++ b/gi-pro-mobile/www/templates/search.html
@@ -42,7 +42,7 @@
 	</ion-content>
 
 	<ion-footer-bar>
-		<button class="button button-royal button-block" ng-disabled="!searchOffer.poi || !searchOffer.date || !searchOffer.time" ng-click="searchOffers()">
+		<button class="button button-calm button-block" ng-disabled="!searchOffer.poi || !searchOffer.date || !searchOffer.time" ng-click="searchOffers()">
 			{{'search' | translate}}
 		</button>
 	</ion-footer-bar>
