Registration, history tabs, other stuff

--- a/gi-pro-mobile/scss/ionic.app.scss
+++ b/gi-pro-mobile/scss/ionic.app.scss
@@ -355,7 +355,7 @@ input[readonly] {
  * LOGIN AND REGISTRATION
  */
 
-.login {
+.login, .registration {
 	text-align: center;
 	.registration {
 		margin-top: 20px;
