--- a/gi-pro-mobile/www/templates/request.html
+++ b/gi-pro-mobile/www/templates/request.html
@@ -4,12 +4,12 @@
 
 	<ion-content class="padding">
 		<ul class="professional" ng-if="!isMine()">
-			<li class="name">{{request.professional.name}} {{request.professional.surname}}</li>
-			<li class="type">{{'professional_type_' + request.professional.type | translate}}</li>
-			<li class="address">{{request.professional.address}}</li>
-			<li class="phone"><span>{{'professional_phone' | translate}}:</span> {{request.professional.phone}}</li>
-			<li class="email"><span>{{'professional_mail' | translate}}:</span> {{request.professional.mail}}</li>
-			<li class="email"><span>{{'professional_pec' | translate}}:</span> {{request.professional.pec}}</li>
+			<li class="name">{{request.requester.name}} {{request.requester.surname}}</li>
+			<li class="type">{{'professional_type_' + request.requester.type | translate}}</li>
+			<li class="address">{{request.requester.address}}</li>
+			<li class="phone"><span>{{'professional_phone' | translate}}:</span> {{request.requester.phone}}</li>
+			<li class="email"><span>{{'professional_mail' | translate}}:</span> {{request.requester.mail}}</li>
+			<li class="email"><span>{{'professional_pec' | translate}}:</span> {{request.requester.pec}}</li>
 		</ul>
 
 		<div class="poi">
@@ -31,7 +31,7 @@
 			<div class="item item-text-wrap" ng-class="{'item-thumbnail-left': !!offer.professional.imageUrl}">
 				<img ng-if="!!offer.professional.imageUrl" ng-src="{{generateImageUrl(offer.professional.imageUrl)}}" />
 				<h2>{{offer.professional.name}} {{offer.professional.surname}}</h2>
-				<h3>{{offer.startTime | date:'longDate'}}, {{offer.startTime | date:'shortTime'}}</h3>
+				<h3 ng-if="!!offer.startTime">{{offer.startTime | date:'longDate'}}, {{offer.startTime | date:'shortTime'}}</h3>
 			</div>
 		</div>
 	</ion-content>
