--- a/gi-pro-mobile/www/templates/searchresults.html
+++ b/gi-pro-mobile/www/templates/searchresults.html
@@ -18,6 +18,8 @@
 					<ul>
 						<li class="phone"><span>{{'professional_phone' | translate}}:</span> {{offer.professional.phone}}</li>
 						<li class="email"><span>{{'professional_mail' | translate}}:</span> {{offer.professional.mail}}</li>
+						<!--<li class="phone"><span><i class="icon ion-android-call"></i></span> {{offer.professional.phone}}</li>
+						<li class="email"><span><i class="icon ion-email"></i></span> {{offer.professional.mail}}</li>-->
 					</ul>
 					<!--
 					<button class="button button-small button-royal" ng-click="">
