--- a/gi-pro-mobile/www/templates/offer.html
+++ b/gi-pro-mobile/www/templates/offer.html
@@ -5,7 +5,8 @@
 	<ion-content class="padding">
 		<ul class="professional" ng-if="!isMine()">
 			<li class="name">{{offer.professional.name}} {{offer.professional.surname}}</li>
-			<li class="type">{{'professional_type_' + offer.professional.type | translate}}</li>
+			<!--<li class="type">{{'professional_type_' + offer.professional.type | translate}}</li>-->
+			<li class="type">{{offer.professional.type}}</li>
 			<li class="address">{{offer.professional.address}}</li>
 			<li class="phone"><span>{{'professional_phone' | translate}}:</span> {{offer.professional.phone}}</li>
 			<li class="email"><span>{{'professional_mail' | translate}}:</span> {{offer.professional.mail}}</li>
