--- a/gi-pro-mobile/scss/ionic.app.scss
+++ b/gi-pro-mobile/scss/ionic.app.scss
@@ -429,3 +429,12 @@ input[readonly] {
 		color: $dark;
 	}
 }
+
+.matches {
+  padding-top: 20px;
+
+  span{
+    font-weight: bold;
+    color: $t_darkwine;
+  }
+}
