--- a/gi-pro-mobile/www/templates/request.html
+++ b/gi-pro-mobile/www/templates/request.html
@@ -3,15 +3,22 @@
 	</ion-nav-buttons>
 
 	<ion-content class="padding">
-		<ul class="professional" ng-if="!isMine()">
-			<li class="name">{{request.requester.name}} {{request.requester.surname}}</li>
-			<!--<li class="type">{{'professional_type_' + request.requester.type | translate}}</li>-->
-			<li class="type">{{request.requester.type}}</li>
-			<li class="address">{{request.requester.address}}</li>
-			<li class="phone"><span>{{'professional_phone' | translate}}:</span> {{request.requester.phone}}</li>
-			<li class="email"><span>{{'professional_mail' | translate}}:</span> {{request.requester.mail}}</li>
-			<li class="email"><span>{{'professional_pec' | translate}}:</span> {{request.requester.pec}}</li>
-		</ul>
+		<div class="professional" ng-if="!isMine()">
+			<div class="item item-text-wrap item-thumbnail-left">
+				<img ng-src="{{generateImageUrl(request.requester.imageUrl)}}" />
+				<ul>
+					<li class="name">{{request.requester.name}} {{request.requester.surname}}</li>
+					<!--<li class="type">{{'professional_type_' + request.requester.type | translate}}</li>-->
+					<li class="type">{{request.requester.type}}</li>
+				</ul>
+			</div>
+			<ul>
+				<li class="address"><i class="icon ion-location"></i>{{request.requester.address}}</li>
+				<li class="phone"><i class="icon ion-android-call"></i><a ng-href="tel:{{request.requester.phone}}">{{request.requester.phone}}</a></li>
+				<li class="email"><i class="icon ion-email"></i><a ng-href="mailto:{{request.requester.mail}}">{{request.requester.mail}}</a></li>
+				<li class="email"><i class="icon ion-email-unread"></i><a ng-href="mailto:{{request.requester.pec}}">{{request.requester.pec}}</a></li>
+			</ul>
+		</div>
 
 		<div class="poi">
 			<div>{{'request_detail_poi' | translate}}:</div>
@@ -24,15 +31,18 @@
 		</div>
 
 		<div class="datetime" ng-if="!!request.startTime">
-			<div>{{'request_detail_date' | translate}}:</div>
-			<span class="date">{{request.startTime | date:'longDate'}}</span>, <span class="time">{{request.startTime | date:'shortTime'}}</span>
+			<div>{{'request_detail_date' | translate}} <span class="date">{{request.startTime | date:'longDate'}}</span>, <span class="time">{{request.startTime | date:'shortTime'}}</span></div>
 		</div>
 
 		<div class="card" ng-repeat="offer in matchingOffers" ng-if="!!matchingOffers && matchingOffers.length > 0" ng-click="viewProfile(offer.professional)">
-			<div class="item item-text-wrap" ng-class="{'item-thumbnail-left': !!offer.professional.imageUrl}">
-				<img ng-if="!!offer.professional.imageUrl" ng-src="{{generateImageUrl(offer.professional.imageUrl)}}" />
+			<div class="item item-text-wrap item-thumbnail-left" ng-class="{'item-thumbnail-left': !!offer.professional.imageUrl}">
+				<img ng-src="{{generateImageUrl(offer.professional.imageUrl)}}" />
 				<h2>{{offer.professional.name}} {{offer.professional.surname}}</h2>
-				<h3 ng-if="!!offer.startTime">{{offer.startTime | date:'longDate'}}, {{offer.startTime | date:'shortTime'}}</h3>
+				<!--<h3 ng-if="!!offer.startTime">{{offer.startTime | date:'longDate'}}, {{offer.startTime | date:'shortTime'}}</h3>-->
+				<ul>
+					<li class="phone"><i class="icon ion-android-call"></i>{{offer.professional.phone}}</li>
+					<li class="email"><i class="icon ion-email"></i>{{offer.professional.mail}}</li>
+				</ul>
 			</div>
 		</div>
 	</ion-content>
