--- a/gi-pro-mobile/www/templates/home.html
+++ b/gi-pro-mobile/www/templates/home.html
@@ -12,7 +12,7 @@
 					<div class="card" ng-repeat="request in requests" ng-if="!!requests && requests.length > 0" ng-click="openRequestDetails(request)">
 						<div class="item item-text-wrap">
 							<h2>{{request.poi.name}}</h2>
-							<h3>{{request.startTime | date:'longDate'}}, {{request.startTime | date:'shortTime'}}</h3>
+							<h3><i class="icon ion-calendar"></i>{{request.startTime | date:'longDate'}}, {{request.startTime | date:'shortTime'}}</h3>
 							<span class="badge badge-calm" ng-if="!!requestsNotifications[request.objectId]">{{requestsNotifications[request.objectId].length}}</span>
 						</div>
 					</div>
@@ -31,8 +31,8 @@
 						<div class="item item-text-wrap">
 							<h2>{{offer.poi.name}}</h2>
 							<h3 ng-if="!!offer.startTime && !!offer.endTime">
-									{{offer.startTime | date:'longDate'}}, {{offer.startTime | date:'shortTime'}} - {{offer.endTime | date:'shortTime'}}
-								</h3>
+									<i class="icon ion-clock"></i>{{offer.startTime | date:'longDate'}}, {{offer.startTime | date:'shortTime'}} - {{offer.endTime | date:'shortTime'}}
+							</h3>
 							<span class="badge badge-calm" ng-if="!!offersNotifications[offer.objectId]">{{offersNotifications[offer.objectId].length}}</span>
 						</div>
 					</div>
