--- a/gi-pro-mobile/scss/ionic.app.scss
+++ b/gi-pro-mobile/scss/ionic.app.scss
@@ -229,6 +229,12 @@ input[readonly] {
 	.scroll-view {
 		height: 100%;
 	}
+	.card {
+		.icon {
+			margin-right: 7px;
+			font-size: 20px;
+		}
+	}
 }
 
 /*
