--- a/gi-pro-mobile/www/css/ionic.app.css
+++ b/gi-pro-mobile/www/css/ionic.app.css
@@ -10182,3 +10182,48 @@ input[readonly] {
   .matches span {
     font-weight: bold;
     color: #652648; }
+
+.credits .center {
+  text-align: center; }
+
+.credits .credits_title {
+  text-align: center;
+  color: #652648;
+  font-size: 24px;
+  font-weight: bold;
+  margin-top: 20px;
+  margin-bottom: 10px; }
+
+.credits .bg-image {
+  background-color: #b99aaf; }
+
+.credits .credits_subtitle {
+  margin-top: 20px !important;
+  text-align: center;
+  color: #652648;
+  font-size: 18px;
+  font-weight: bold; }
+
+.credits .credits_row {
+  padding: 0;
+  margin-bottom: 10px; }
+  .credits .credits_row .col {
+    text-align: center; }
+
+.credits .credits_row.last {
+  margin-bottom: 20px; }
+
+.credits .credits_row.version {
+  color: #b99aaf; }
+
+.credits .credits_row.version .col {
+  font-size: 12px;
+  line-height: 12px; }
+
+.credits .credits_mail {
+  color: black;
+  font-size: 14px;
+  font-weight: normal; }
+
+.credits .credits_version {
+  text-align: center; }
