--- a/gi-pro-mobile/www/templates/credits.html
+++ b/gi-pro-mobile/www/templates/credits.html
@@ -3,6 +3,55 @@
   </ion-nav-buttons>
 
   <ion-content>
-    <h4>{{'credits' | translate}}</h4>
+        <div class="row">
+            <div class="col">
+                <div class="credits_title">{{'app'|translate}}</div>
+            </div>
+        </div>
+<!--
+        <div class="row credits_row version">
+            <div class="col credits_version" ng-bind-html="version"></div>
+        </div>
+-->
+        <div class="row credits_row credits_subtitle">
+            <div class="col"><span>{{'credits_project' | translate}}</span>
+            </div>
+        </div>
+        <div class="row credits_row">
+            <div class="col col-center">
+                <a href="#" onclick="window.open('http://www.fiif.it/', '_system', 'location=yes'); return false;"><img class="image center" src="img/fiif.png" width="100%" />
+                </a>
+            </div>
+            <div class="col col-center">
+                <a href="#" onclick="window.open('http://www.gipro.tn.it/', '_system', 'location=yes'); return false;"><img class="image bg-image center" src="img/gipro.png" width="60%" />
+                </a>
+            </div>
+        </div>
+        <div class="row credits_row">
+            <div class="col col-center">
+                <a href="#" onclick="window.open('http://www.consiglionazionaleforense.it/', '_system', 'location=yes'); return false;"><img class="image center" src="img/cnf.jpg" width="100%" />
+                </a>
+            </div>
+        </div>
+
+        <div class="row credits_row credits_subtitle">
+            <div class="col"><span>{{'credits_developer' | translate}}</span>
+            </div>
+        </div>
+        <div class="row credits_row">
+            <div class="col col-center">
+                <a href="#" onclick="window.open('http://www.smartcommunitylab.it/', '_system', 'location=yes'); return false;"><img class="image center" src="img/logo-sco-fbk.png" width="100%" />
+                </a>
+            </div>
+        </div>
+
+
+
+
+        <div class="row credits_row credits_subtitle">
+            <div class="col"><span class="credits-title">{{'credits_info' | translate}}</span>
+                <br/><a class="credits_mail" href="mailto:info@smartcommunitylab.it">info@smartcommunitylab.it</a>
+            </div>
+        </div>
   </ion-content>
 </ion-view>
