--- a/gi-pro-mobile/www/templates/searchresults.html
+++ b/gi-pro-mobile/www/templates/searchresults.html
@@ -12,7 +12,7 @@
 		<ion-list ng-if="!!offers && offers.length > 0">
 			<div class="card" ng-repeat="offer in offers" ng-click="openOfferDetails(offer)">
 				<div class="item item-thumbnail-left">
-					<img src="http://placekitten.com/200/200">
+					<img ng-src="{{generateImageUrl(offer.professional.imageUrl)}}" />
 					<h2>{{offer.professional.name}} {{offer.professional.surname}}</h2>
 					<!--<p>{{offer.professional.type}}</p>-->
 					<ul>
