--- a/gi-pro-mobile/scss/ionic.app.scss
+++ b/gi-pro-mobile/scss/ionic.app.scss
@@ -540,7 +540,8 @@ input[readonly] {
   }
 
   .credits_row.version {
-      color: $t_lightwine;
+      color: $t_wine;
+      text-transform: uppercase;
   }
 
   .credits_row.version .col {
