--- a/gi-pro-mobile/www/templates/credits.html
+++ b/gi-pro-mobile/www/templates/credits.html
@@ -8,11 +8,9 @@
                 <div class="credits_title">{{'app'|translate}}</div>
             </div>
         </div>
-<!--
         <div class="row credits_row version">
-            <div class="col credits_version" ng-bind-html="version"></div>
+            <div class="col credits_version" ng-bind-html="'beta'"></div>
         </div>
--->
         <div class="row credits_row credits_subtitle">
             <div class="col"><span>{{'credits_project' | translate}}</span>
             </div>
