--- a/gi-pro-mobile/www/templates/searchresults.html
+++ b/gi-pro-mobile/www/templates/searchresults.html
@@ -4,7 +4,7 @@
 	</ion-nav-buttons>
 
 	<ion-content>
-		<h4 ng-if="!!offers && offers.length == 0">
+		<h4 class="padding" ng-if="!!offers && offers.length == 0">
 			{{'offers_empty' | translate}}
 		</h4>
 
