app name and template texts

--- a/gi-pro-web/src/main/resources/templates/confirmation_en.html
+++ b/gi-pro-web/src/main/resources/templates/confirmation_en.html
@@ -9,7 +9,7 @@
       Dear  <span data-th-text="${user.name}">Mario</span> <span data-th-text="${user.surname}">Rossi</span>, 
     </p>
     <p>
-      You have been registered to <b>SmartCommunity</b>
+      You have been registered to <b>TECNOTOGA</b>
     </p>
     <p>In order to complete the registration, click <a href="http://smartcommunitylab.it/" th:href="${url}">here</a>.</p>
     <p>
@@ -17,7 +17,7 @@
     </p>
     <p>
       With best regards, <br />
-      <em>Smart Community Lab</em>
+      <em>TECNOTOGA team</em>
     </p>
   </body>
 </html>
