--- a/gi-pro-web/src/main/resources/templates/reset_it.html
+++ b/gi-pro-web/src/main/resources/templates/reset_it.html
@@ -9,7 +9,7 @@
       Gentile  <span data-th-text="${user.name}">Mario</span> <span data-th-text="${user.surname}">Rossi</span>, 
     </p>
     <p>
-      La sua password per <b>SmartCommunity</b> è stata resettata.
+      La sua password per <b>TECNOTOGA</b> è stata resettata.
     </p>
     <p>Per aggiornare le credenziali, apra questo <a href="http://smartcommunitylab.it/" th:href="${url}">link</a>.</p>
     <p>
@@ -17,7 +17,7 @@
     </p>
     <p>
       Cordiali saluti, <br />
-      <em>Smart Community Lab</em>
+      <em>TECNOTOGA team</em>
     </p>
   </body>
 </html>
