--- a/gi-pro-web/src/main/resources/templates/confirmation_it.html
+++ b/gi-pro-web/src/main/resources/templates/confirmation_it.html
@@ -8,13 +8,13 @@
     <p>
       Gentile  <span data-th-text="${user.name}">Mario</span> <span data-th-text="${user.surname}">Rossi</span>, 
     </p>
-    <p>Per completare la registrazione a Smart Community, apri questo <a href="http://smartcommunitylab.it/" th:href="${url}">link</a>.</p>
+    <p>Per completare la registrazione a TECNOTOGA, apri questo <a href="http://smartcommunitylab.it/" th:href="${url}">link</a>.</p>
     <p>
       Si prega di  contattare <a href="mailto:info@smartcommunitylab.it">supporto</a> in caso di problemi con l'accesso.
     </p>
     <p>
       Cordiali saluti, <br />
-      <em>Smart Community Lab</em>
+      <em>TECNOTOGA team</em>
     </p>
   </body>
 </html>
