credits and minor fixes

--- a/gi-pro-mobile/www/templates/credits.html
+++ b/gi-pro-mobile/www/templates/credits.html
@@ -21,13 +21,19 @@
                 </a>
             </div>
             <div class="col col-center">
-                <a href="#" onclick="window.open('http://www.gipro.tn.it/', '_system', 'location=yes'); return false;"><img class="image bg-image center" src="img/gipro.png" width="60%" />
+                <a href="#" onclick="window.open('http://www.gipro.tn.it/', '_system', 'location=yes'); return false;"><img class="image center" src="img/gipro.png" width="60%" />
                 </a>
             </div>
         </div>
         <div class="row credits_row">
             <div class="col col-center">
                 <a href="#" onclick="window.open('http://www.consiglionazionaleforense.it/', '_system', 'location=yes'); return false;"><img class="image center" src="img/cnf.jpg" width="100%" />
+                </a>
+            </div>
+        </div>
+        <div class="row credits_row">
+            <div class="col col-center">
+                <a href="#" onclick="window.open('http://www.consiglionazionaleforense.it/web/cnf/avvocatura-giovane', '_system', 'location=yes'); return false;"><img class="image center" src="img/cnf-lab.png" width="70%" />
                 </a>
             </div>
         </div>
