--- a/gi-pro-mobile/www/templates/registration.html
+++ b/gi-pro-mobile/www/templates/registration.html
@@ -14,7 +14,11 @@
 				<input type="password" ng-model="registration.pwdagain" placeholder="{{'password_again' | translate}}">
 			</label>
 		</div>
-		<button class="button button-block button-calm" ng-click="register()">{{'register' | translate}}</button>
+
+		<a href="#" ng-click="openPrivacyLink()">{{'register_privacy_info' | translate}}</a>
+		<ion-checkbox class="checkbox-calm" ng-model="registration.privacy">{{'register_privacy_accept' | translate}}</ion-checkbox>
+
+		<button class="button button-block button-calm" ng-click="register()" ng-disabled="!registration.privacy">{{'register' | translate}}</button>
 		<a ng-click="cancel()">{{'cancel' | translate}}</a>
 	</ion-content>
 </ion-view>
